--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -39,11 +39,10 @@ jobs:
         run: |
           echo  ${{ secrets.DOCKERHUB_TOKEN }} | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
-      - name: s6v3. Naviserver. Build and push image.
+      - name: Naviserver. Build and push image.
         run: |
           echo "::group::Prepare environment"
           set -a; source ${GITHUB_WORKSPACE}/src/VERSIONS ; set +a;
-          export IMAGE_TAG="${BASE_IMAGE_TAG}-${NS_IMAGE_TAG}"
           cd ${GITHUB_WORKSPACE}/src/hook
           echo "::endgroup::"
           echo "::group::Build image"
